tests/fail/pub_shape_exposed_ptr.tk
pub shape Point(
    x: i32,
    *ptr: f32
)

fn main() -> i32 {
    return 0
}
